fixed contact page on desktop beng too small

--- a/css/contact.css
+++ b/css/contact.css
@@ -280,6 +280,10 @@ form p{
         padding-bottom: 80px;
     }
 
+    main .container {
+        max-width: 1000px !important;
+    }
+
     #contact {
         max-width: 600px;
     }
